--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 06:09:00 PM</p>
+    <p class="lastupdate">09/06/2020 06:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">112.7&#176;F</td>
+        <td class="data">112.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">112.7&#176;F</td>
+        <td class="data">112.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">112.7&#176;F</td>
+        <td class="data">112.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.9&#176;F</td>
+        <td class="data">47.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.799 inHg (-0.035)</td>
+        <td class="data">29.801 inHg (-0.034)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">91.4&#176;F</td>
+        <td class="data">91.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">31%</td>
       </tr>
     </tbody>
   </table>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:05:03 PM">
-            91.4</span><br/>
+          <span title="06:12:03 PM">
+            91.6</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:05:03 PM (Sunday)">
-            91.4</span><br/>
+          <span title="06:12:03 PM (Sunday)">
+            91.6</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 3 hours, 22 minutes</td>
+      <td class="data">5 days, 3 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 3 hours, 22 minutes</td>
+      <td class="data">5 days, 3 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
