--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:44:00 PM</p>
+    <p class="lastupdate">09/06/2020 11:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.3&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">32%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.837 inHg (0.012)</td>
+        <td class="data">29.834 inHg (0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 8 hours, 57 minutes</td>
+      <td class="data">5 days, 9 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 8 hours, 57 minutes</td>
+      <td class="data">5 days, 9 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
