--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 12:09:00 AM</p>
+    <p class="lastupdate">09/07/2020 12:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.2&#176;F</td>
+        <td class="data">82.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.2&#176;F</td>
+        <td class="data">82.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.2&#176;F</td>
+        <td class="data">82.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">33%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.835 inHg (0.004)</td>
+        <td class="data">29.833 inHg (0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             83.6</span><br/>
-          <span title="12:08:00 AM">
-            83.2</span>
+          <span title="12:13:29 AM">
+            82.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:00 AM" class="loval">
-            83.2</span>
+          <span title="12:13:29 AM" class="loval">
+            82.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            50.6</span><br/>
-          <span title="12:08:00 AM">
-            50.2</span>
+          <span title="12:11:33 AM">
+            50.9</span><br/>
+          <span title="12:11:05 AM">
+            50.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:52 AM (Sunday)">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            32</span><br/>
+          <span title="12:11:33 AM">
+            33</span><br/>
           <span title="12:00:01 AM">
             32</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:01:01 AM">
-            29.835</span><br/>
+          <span title="12:09:01 AM">
+            29.836</span><br/>
           <span title="12:00:06 AM">
             29.832</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 9 hours, 22 minutes</td>
+      <td class="data">5 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 9 hours, 22 minutes</td>
+      <td class="data">5 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
