--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 12:14:00 AM</p>
+    <p class="lastupdate">09/07/2020 12:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">82.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">82.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">82.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">51.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">34%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.833 inHg (0.005)</td>
+        <td class="data">29.833 inHg (0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             83.6</span><br/>
-          <span title="12:13:29 AM">
-            82.9</span>
+          <span title="12:18:05 AM">
+            82.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:13:29 AM" class="loval">
-            82.9</span>
+          <span title="12:18:05 AM" class="loval">
+            82.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:11:33 AM">
-            50.9</span><br/>
+          <span title="12:17:31 AM">
+            51.4</span><br/>
           <span title="12:11:05 AM">
             50.1</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:11:33 AM">
-            33</span><br/>
+          <span title="12:17:31 AM">
+            34</span><br/>
           <span title="12:00:01 AM">
             32</span>
         </td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="12:00:06 AM">
-            29.832</span>
+          <span title="12:16:01 AM">
+            29.831</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            1</span><br/>
-          286
+          <span title="12:15:37 AM">
+            2</span><br/>
+          304
         </td>
         <td class="data new_row hilo_week">
           <span title="12:26:08 PM (Sunday)">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          292
+          318
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.0</span><br/>
-          <span title="12:03:01 AM">
-            86.9</span>
+          <span title="12:15:01 AM">
+            86.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 9 hours, 27 minutes</td>
+      <td class="data">5 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 9 hours, 27 minutes</td>
+      <td class="data">5 days, 9 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
