--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 12:19:00 AM</p>
+    <p class="lastupdate">09/07/2020 12:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.6&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.6&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.6&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.4&#176;F</td>
+        <td class="data">52.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">36%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.833 inHg (0.003)</td>
+        <td class="data">29.833 inHg (0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.9&#176;F</td>
+        <td class="data">86.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             83.6</span><br/>
-          <span title="12:18:05 AM">
-            82.6</span>
+          <span title="12:23:43 AM">
+            81.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:18:05 AM" class="loval">
-            82.6</span>
+          <span title="12:23:43 AM" class="loval">
+            81.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:17:31 AM">
-            51.4</span><br/>
+          <span title="12:23:31 AM">
+            52.4</span><br/>
           <span title="12:11:05 AM">
             50.1</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:17:31 AM">
-            34</span><br/>
+          <span title="12:23:31 AM">
+            36</span><br/>
           <span title="12:00:01 AM">
             32</span>
         </td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:15:37 AM">
-            2</span><br/>
-          304
+          <span title="12:19:33 AM">
+            3</span><br/>
+          0
         </td>
         <td class="data new_row hilo_week">
           <span title="12:26:08 PM (Sunday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          318
+          336
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            31</span><br/>
+          <span title="12:19:01 AM">
+            32</span><br/>
           <span title="12:00:01 AM">
             31</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 9 hours, 32 minutes</td>
+      <td class="data">5 days, 9 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 9 hours, 32 minutes</td>
+      <td class="data">5 days, 9 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
